--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>My Funky Website</title>
 
+    
     <style>
         * {
             margin: 0;
@@ -13,55 +14,83 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #f0f8ff, #e6e6fa);
+            font-family: 'Fredoka', sans-serif; /* New bubbly font */
+            /* Funky vibrant gradient background */
+            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 40%, #a1c4fd 100%);
             display: flex;
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
-            padding: 40px 20px;
-            color: #333;
+            padding: 50px 20px;
+            color: #444;
+            overflow-x: hidden;
+        }
+
+        /* Floating animation for the main title */
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
         }
 
         h1 {
-            font-size: 2.8em;
+            font-size: 3.5em;
             margin-bottom: 10px;
-            color: #4a90e2;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .subtitle {
-            font-size: 1.1em;
-            margin-bottom: 40px;
+            color: #fff;
+            /* Creates a thick, sticker-like text shadow */
+            text-shadow: 
+                3px 3px 0 #ff6b81, 
+                -1px -1px 0 #ff6b81,  
+                1px -1px 0 #ff6b81,
+                -1px 1px 0 #ff6b81,
+                1px 1px 0 #ff6b81;
+            animation: float 3s ease-in-out infinite;
             text-align: center;
         }
 
-        /* Buttons Section */
+        .subtitle {
+            font-size: 1.3em;
+            margin-bottom: 50px;
+            text-align: center;
+            color: #fff;
+            background: rgba(255, 255, 255, 0.3);
+            padding: 10px 25px;
+            border-radius: 30px; /* Bubble pill shape */
+            border: 2px solid rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(5px);
+        }
+
+        /* Bubble Buttons Section */
         .links {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
             justify-content: center;
-            margin-bottom: 50px;
+            margin-bottom: 60px;
         }
 
         .links a {
-            padding: 12px 25px;
-            background-color: #4a90e2;
-            color: white;
+            padding: 15px 30px;
+            background: #ffeaa7; /* Bright yellow */
+            color: #ff5252; /* Funky red/pink text */
             text-decoration: none;
-            border-radius: 8px;
-            font-size: 1em;
-            transition: 0.3s ease;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 50px; /* Fully rounded / pill shape */
+            font-size: 1.2em;
+            font-weight: 600;
+            border: 3px solid #ff5252;
+            transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55); /* Bouncy transition */
+            box-shadow: 0 8px 0 #ff5252; /* Hard shadow for 3D bubble effect */
         }
 
         .links a:hover {
-            background-color: #357abd;
-            transform: translateY(-3px);
+            background: #ff5252;
+            color: #ffeaa7;
+            border-color: #ffeaa7;
+            transform: translateY(4px); /* Pushes down when hovered */
+            box-shadow: 0 4px 0 #ffeaa7;
         }
 
-        /* Submission Section */
+        /* Bubbly Submission Cards */
         .submission-container {
             display: flex;
             gap: 40px;
@@ -72,32 +101,44 @@
         }
 
         .card {
-            background: white;
-            padding: 25px 30px;
-            border-radius: 12px;
+            background: rgba(255, 255, 255, 0.85);
+            padding: 30px;
+            border-radius: 40px; /* Very rounded corners */
             width: 320px;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 15px 25px rgba(0,0,0,0.1), inset 0 0 10px rgba(255,255,255,0.5);
+            border: 4px solid #fff;
             transition: 0.3s ease;
+            position: relative;
         }
 
         .card:hover {
-            transform: translateY(-5px);
+            transform: scale(1.05) rotate(2deg); /* Fun bouncy tilt on hover */
         }
 
         .card h3 {
-            margin-bottom: 15px;
-            color: #4a90e2;
-            border-bottom: 2px solid #4a90e2;
-            padding-bottom: 5px;
+            margin-bottom: 20px;
+            color: #70a1ff;
+            font-size: 1.6em;
+            text-align: center;
+            background: #f1f2f6;
+            padding: 10px;
+            border-radius: 20px;
+            border: 2px dashed #70a1ff;
         }
 
         .card p {
-            margin: 8px 0;
-            font-size: 0.95em;
+            margin: 12px 0;
+            font-size: 1.1em;
+            color: #2f3542;
+        }
+
+        .card p strong {
+            color: #ff7f50; /* Orange pop for labels */
         }
 
         /* Responsive */
         @media (max-width: 768px) {
+            h1 { font-size: 2.5em; }
             .submission-container {
                 flex-direction: column;
                 align-items: center;
@@ -110,7 +151,7 @@
 <body>
 
     <h1>Welcome to My Website</h1>
-    <p class="subtitle">This is a simple HTML page.</p>
+    <p class="subtitle">Select an experiment to view the source code and output.</p>
 
     <div class="links">
         <a href="Experiment 1/index.html">Experiment-1</a>
@@ -126,19 +167,17 @@
             <h3>Submitted By</h3>
             <p><strong>Name:</strong> Jyotshna Shree</p>
             <p><strong>USN:</strong> 24BTRCN094</p>
-            <p><strong>Course:</strong> Web Technologies (23CSE404)</p>
-            <p><strong>Class:</strong> 4th Semester CSE</p>
+            <p><strong>Course:</strong> Web Technologies</p>
+            <p><strong>Program:</strong> CSE General "B"</p>
         </div>
 
         <div class="card">
             <h3>Submitted To</h3>
             <p><strong>Faculty Name:</strong> Junaid Rasool Sir</p>
-            <p><strong>Department:</strong> Computer Science Engineering</p>
+            <p><strong>Department:</strong> Computer Science</p>
         </div>
 
     </div>
 
 </body>
-
 </html>
-
